# Viola-Jones

./: CMakeLists.txt  README.md
examples/: demo.cpp
include/: AdaBoost.h  CascadeClassifier.h  HaarFeature.h  Image.h
include/viola_jones/: AdaBoost.h  CascadeClassifier.h  HaarFeature.h  Image.h  Trainer.h  utils.hpp
src/: Trainer.cpp  main.cpp  trainer_main.cpp
